--- a/frontend/src/components/Navbar/navbar.scss
+++ b/frontend/src/components/Navbar/navbar.scss
@@ -45,12 +45,14 @@
         cursor: pointer;
         
         flex-direction: column;
+        
 
         div{
-            width: 10px;
-            height: 3px;
+            margin: 0 auto;
+            width:30px;
+            height: 2px;
             background: transparent;
-            border-radius: 50%;
+            // border-radius: 50%;
             margin-bottom: 5px;
         }
         
