--- a/frontend/src/components/Navbar/navbar.scss
+++ b/frontend/src/components/Navbar/navbar.scss
@@ -33,7 +33,7 @@
 // }
 
 .navbar-links{
-    // flex: 1; 
+    flex: 1; 
     display: flex;
     justify-content: center;
     align-items: center;
