--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,3 +1,11 @@
+.app{
+    background-color: var(--primary-color);
+    font-family: var(--font-base);
+}
+
+
+
+
 .app__p-text{
     font-size: 0.8rem;
     text-align: left;
