--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -47,7 +47,7 @@
     font-size: 1rem;
     font-weight: 800;
     color: var(--black-color);
-    text-align-last: left;
+    text-align: left;
 
     @media screen and (min-width: 2000px) {
         font-size: 2rem;
