--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -3,6 +3,27 @@
     font-family: var(--font-base);
 }
 
+.app__container {
+    width: 100%;
+    min-width: 100vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.app__copyright{
+    width: 100%;
+    padding: 2rem 0 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+    p{
+        text-transform: uppercase;
+        color: var(--black-color);
+    }
+}
 
 
 
