--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -25,7 +25,33 @@
     }
 }
 
+.app__navigation{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
+    padding: 1rem;
+
+    .app__navigation-dot{
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #cbcbcb;
+        margin: 0.5rem;
+
+        transition: background-color 0.2s ease-in-out;
+
+        &:hover{
+            background-color: var(--secondary-color);
+        }
+
+        @media screen and (min-width:2000px){
+            width: 20px;
+            height: 20px;
+        }
+    }
+}
 
 .app__p-text{
     font-size: 0.8rem;
@@ -76,5 +102,16 @@
 
     @media screen and (max-width: 450px){
         font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .app__navigation,
+    .app__social{
+        display: none;
+    }
+
+    .copyring{
+        padding: 2rem;
     }
 }
