--- a/frontend/src/container/Header/header.scss
+++ b/frontend/src/container/Header/header.scss
@@ -1,3 +1,20 @@
+#home{
+  position: relative;
+  background: url("../../assets//bgIMG.png");
+  background-repeat: cover;
+  background-position: center;
+  background-repeat: repeat;
+
+  .app__wrapper{
+    padding: 0;
+
+    .app__copyright{
+      display: none;
+    }
+  }
+
+}
+
 .header {
   flex: 1;
   width: 100%;
