--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -25,6 +25,17 @@
     }
 }
 
+.app__wrapper{
+    flex:1;
+    width: 100%;
+    flex-direction: column;
+    padding: 4rem 2rem;
+
+    @media screen and (max-width:450px){
+        padding: 4rem 1rem 2rem;
+    }
+}
+
 .app__navigation{
     display: flex;
     justify-content: center;
@@ -86,8 +97,60 @@
 
 .app__flex{
     display: flex;
+    // flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.app__social{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+
+    padding: 1rem;
+
+    div{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--white-color);
+        margin: 0.25rem 0;
+        border: 1px solid var(--lightGray-color);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        transition: all 0.3s ease-in-out;
+
+        svg{
+            width: 15px;
+            height: 15px;
+            color: var(--gray-color);
+        }
+
+        &:hover{
+            background-color: var(--secondary-color);
+            border-color: var(--secondary-color);
+
+            svg{
+                color: var(--white-color);
+            }
+        }
+
+        @media screen and (min-width: 2000px){
+            width: 70px;
+            height: 70px;
+
+            margin: 0.5rem 0;
+
+            svg{
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
 }
 
 .app__bold-text{
