--- a/frontend/src/container/About/about.scss
+++ b/frontend/src/container/About/about.scss
@@ -1,7 +1,7 @@
-.app__about{
+.about{
     flex:1;
     width: 100%;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .about__profiles {
