--- a/frontend/src/container/Work/work.scss
+++ b/frontend/src/container/Work/work.scss
@@ -1,3 +1,8 @@
+.works{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
 .work-filter{
     display: flex;
     flex-direction: row;
