--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -40,6 +40,10 @@
     background-color: var(--white-color);
 }
 
+.app__primarybg{
+    background-color: var(--primary-color);
+}
+
 .app__navigation{
     display: flex;
     justify-content: center;
