--- a/frontend/src/container/Skills/skills.scss
+++ b/frontend/src/container/Skills/skills.scss
@@ -21,8 +21,8 @@
     flex:1;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 
     margin-right: 5rem;
 
