finish styling Footer component

--- a/frontend/src/container/Footer/footer.scss
+++ b/frontend/src/container/Footer/footer.scss
@@ -103,9 +103,30 @@
         }
 }
 
+button{
+    padding: 1rem 0.2rem;
+    border-radius: 10px;
+    border:none;
+    background-color: var(--secondary-color);
 
+    font-weight: 500;
+    color: var(--white-color);
+    outline: none;
+    margin: 2rem 0 0 0;
+    font-family: var(--font-base);
 
+    transition: cubic-bezier(0.55, 0.85, 0.68, 0.53);
+    cursor: pointer;
 
+    &:hover{
+        background-color: #2430af;
+    }
+}
+
+@media screen and (max-width:768px){
+    width: 100%;
+    margin: 1rem 0;
+}
 
 
 }
