--- a/frontend/src/container/Footer/footer.scss
+++ b/frontend/src/container/Footer/footer.scss
@@ -27,7 +27,7 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #fef4f5;
+    background-color: #f2f7fb;
 
     transition: all 0.3s ease-in-out;
 
@@ -46,7 +46,7 @@
       font-weight: 500;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px #f2f7fb;
     }
 
     @media screen and (max-width: 450px) {
