--- a/frontend/src/container/Skills/skills.scss
+++ b/frontend/src/container/Skills/skills.scss
@@ -18,11 +18,12 @@
 }
 
 .skills-list{
-    flex:1;
+    // flex:1;
+    width: 50%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    // flex-wrap: wrap;
+    // justify-content: center;
+    // align-items: center;
 
     margin-right: 5rem;
 
