--- a/frontend/src/container/Work/work.scss
+++ b/frontend/src/container/Work/work.scss
@@ -41,7 +41,7 @@
 
 .work-img{
     width: 100%;
-    height: 230px;
+    height: 170px;
 
     position: relative;
 
@@ -49,11 +49,11 @@
         width: 100%;
         height: 100%;
         border-radius: 0.5rem;
-        object-fit: cover;
+        object-fit: contain;
     }
 
     @media screen and (min-width: 2000px) {
-        height: 350px;
+        height: 300px;
     }
 }
 
@@ -86,7 +86,7 @@
             border-radius: 0.75rem;
         }
 
-        @media screen and (max-width: 300px) {
+        @media screen and (max-width: 600px) {
             width: 100%;
             margin: 1rem;
         }
