--- a/frontend/src/container/Footer/footer.scss
+++ b/frontend/src/container/Footer/footer.scss
@@ -3,9 +3,9 @@
   width: 100%;
   flex-direction: column;
 
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-  }
+  // @media screen and (max-width: 768px) {
+  //   width: 0%;
+  // }
 }
 
 .footer-cards {
