--- a/frontend/src/container/Header/header.scss
+++ b/frontend/src/container/Header/header.scss
@@ -36,26 +36,30 @@
 }
 
 .header-info {
-  flex: 0.65;
+  flex: 0.55;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  // align-items: center;
+  margin-left: 30px;
+  // align-items: flex-start;
   height: 100%;
 
   margin: 0 2rem;
 
-  @media screen and (max-width: 1200px) {
-    width: 100%;
-    margin-right: 0rem;
-  }
+  // @media screen and (max-width: 1200px) {
+  //   width: 100%;
+  //   margin-right: 0rem;
+  // }
 }
 
 .header-badge {
-  width: 100%;
+  // width: 100%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  // justify-content: flex-end;
+  justify-content: center;
+  // align-items: flex-end;
+  align-items: center;
   flex-direction: column;
 
   .badge-cmp,
@@ -76,7 +80,7 @@
     p {
       width: 100%;
       text-transform: uppercase;
-      text-align: right;
+      text-align: center;
     }
   }
 
@@ -88,20 +92,20 @@
     }
   }
 
-  @media screen and (max-width: 1200px) {
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
+  // @media screen and (max-width: 1200px) {
+  //   justify-content: flex-start;
+  //   align-items: flex-start;
+  // }
 }
 
 .header-circles {
-  flex: 0.75;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
   align-items: flex-start;
   height: 100%;
-  margin-left: 1rem;
+  // margin-left: 1rem;
+  margin: 15px 0;
 
   div {
     width: 100px;
@@ -133,25 +137,26 @@
     height: 70px;
   }
 
-  @media screen and (min-width: 2000px) {
-    div:nth-child(2) {
-      width: 400px;
-      height: 400px;
-    }
+  // @media screen and (min-width: 2000px) {
+  //   div:nth-child(2) {
+  //     width: 400px;
+  //     height: 400px;
+  //   }
 
-    div:nth-child(3) {
-      width: 170px;
-      height: 170px;
-    }
+  //   div:nth-child(3) {
+  //     width: 170px;
+  //     height: 170px;
+  //   }
 
-    div:nth-child(1) {
-      width: 200px;
-      height: 200px;
-    }
-  }
+  //   div:nth-child(1) {
+  //     width: 200px;
+  //     height: 200px;
+  //   }
+  // }
 
   @media screen and (max-width: 1200px) {
-    width: 100%;
+    // width: 100%;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-left: 0;
@@ -165,7 +170,6 @@
 .header-img {
   flex: 1;
   height: 100%;
-  
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
