--- a/frontend/src/container/Skills/skills.scss
+++ b/frontend/src/container/Skills/skills.scss
@@ -1,44 +1,57 @@
 .skills{
-    flex:1;
+    // flex:1;
     width: 100%;
     flex-direction: column;
 }
 
 .skills-container{
-    width: 80%;
+    // width: 100%;
     margin-top: 3rem;
 
     display: flex;
-    flex-direction: row;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
+    // flex-wrap: wrap;
 
-    @media screen and (max-width: 900px){
-        width: 100%;
-        flex-direction: column;
-    }
+    // @media screen and (max-width: 900px){
+    //     width: 100%;
+    //     flex-direction: column;
+    // }
 }
 
 .skills-list{
-    // flex:1;
-    width: 50%;
+    flex:1;
+    // width: 100%;
     display: flex;
     // flex-wrap: wrap;
-    // justify-content: center;
-    // align-items: center;
+    justify-content: center;
+    align-items: center;
 
-    margin-right: 5rem;
+    // margin-right: 5rem;
 
     @media screen and (max-width: 900) {
         margin-right: 0;
         justify-content: center;
         align-items: center;
     }
+
+    @media screen and (max-width: 1200px){
+        flex: 1;
+        display: flex;
+        // align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
 
 .skills-item{
+    display: flex;
     flex-direction: column;
     text-align: center;
     margin: 1rem;
     transition: all 0.3s ease-in-out;
+
 
     div{
         width: 90px;
