--- a/frontend/src/test.scss
+++ b/frontend/src/test.scss
@@ -86,7 +86,7 @@
       }
     }
   
-    @media screen and (min-width: 900px) {
-      display: none;
-    }
+    // @media screen and (min-width: 900px) {
+    //   display: none;
+    // }
   }
