make mobile responsive, add some logos

--- a/frontend/src/container/Work/work.scss
+++ b/frontend/src/container/Work/work.scss
@@ -6,7 +6,7 @@
 .work-filter{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 
