--- a/frontend/src/container/Footer/footer.scss
+++ b/frontend/src/container/Footer/footer.scss
@@ -2,15 +2,12 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
-
-  // @media screen and (max-width: 768px) {
-  //   width: 0%;
-  // }
 }
 
 .footer-cards {
   width: 60%;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
