--- a/frontend/src/container/Header/header.scss
+++ b/frontend/src/container/Header/header.scss
@@ -40,25 +40,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // align-items: center;
   margin-left: 30px;
-  // align-items: flex-start;
   height: 100%;
-
   margin: 0 2rem;
-
-  // @media screen and (max-width: 1200px) {
-  //   width: 100%;
-  //   margin-right: 0rem;
-  // }
 }
 
 .header-badge {
-  // width: 100%;
   display: flex;
-  // justify-content: flex-end;
   justify-content: center;
-  // align-items: flex-end;
   align-items: center;
   flex-direction: column;
 
@@ -74,13 +63,16 @@
   }
 
   .tag-cmp {
-    flex-direction: column;
+    width: 20rem;
     margin-top: 3rem;
 
     p {
       width: 100%;
+      font-size: 1.5rem;
       text-transform: uppercase;
       text-align: center;
+      color: slateblue;
+      font-weight: 700;
     }
   }
 
@@ -91,20 +83,13 @@
       font-size: 5rem;
     }
   }
-
-  // @media screen and (max-width: 1200px) {
-  //   justify-content: flex-start;
-  //   align-items: flex-start;
-  // }
 }
 
 .header-circles {
   display: flex;
   flex-direction: column;
-  // justify-content: space-evenly;
   align-items: flex-start;
   height: 100%;
-  // margin-left: 1rem;
   margin: 15px 0;
 
   div {
@@ -137,28 +122,10 @@
     height: 70px;
   }
 
-  // @media screen and (min-width: 2000px) {
-  //   div:nth-child(2) {
-  //     width: 400px;
-  //     height: 400px;
-  //   }
-
-  //   div:nth-child(3) {
-  //     width: 170px;
-  //     height: 170px;
-  //   }
-
-  //   div:nth-child(1) {
-  //     width: 200px;
-  //     height: 200px;
-  //   }
-  // }
 
   @media screen and (max-width: 1200px) {
-    // width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     margin-left: 0;
 
     div {
