--- a/frontend/src/container/Skills/skills.scss
+++ b/frontend/src/container/Skills/skills.scss
@@ -1,34 +1,20 @@
 .skills{
-    // flex:1;
     width: 100%;
     flex-direction: column;
 }
 
 .skills-container{
-    // width: 100%;
     margin-top: 3rem;
-
+    width: 100%;
     display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // flex-direction: column;
-    // flex-wrap: wrap;
-
-    // @media screen and (max-width: 900px){
-    //     width: 100%;
-    //     flex-direction: column;
-    // }
 }
 
 .skills-list{
     flex:1;
-    // width: 100%;
     display: flex;
-    // flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-
-    // margin-right: 5rem;
 
     @media screen and (max-width: 900) {
         margin-right: 0;
@@ -39,7 +25,6 @@
     @media screen and (max-width: 1200px){
         flex: 1;
         display: flex;
-        // align-items: center;
         justify-content: center;
         flex-wrap: wrap;
     }
